Fix initial UI state of Battery protection setting

The setting 'Battery protection' in System Settings -> Power Management
-> Advanced Power Settings was always initially shown deactivated and
did not reflect the actual state of the system as given in
`/sys/bus/platform/drivers/ideapad_acpi/VPC2004\:00/conservation_mode`.
This was fixed so that the initial GUI state reflects the current system
state.

BUG: 488954